# monitorch

./: .gitignore  .readthedocs.yaml  README.md  TODO.md  Untitled.ipynb  Untitled1.ipynb  pyproject.toml  pyrightconfig.json  untitled.py
.github/workflows/: publish.yml
benchmark/: benchmark_exploration.ipynb  benchmark_utils.py  run_cpu_tests.py  script.py
docs/: conf.py  index.rst  requirements.txt
docs/_static/: custom.css
docs/api/: gatherer.rst  index.rst  inspector.rst  lens.rst  monitorch.rst  numerical.rst  preprocessor.rst  visualizer.rst  vizualizer.rst
docs/notebooks/: title_page.rst
monitorch/: __init__.py
monitorch/gatherer/: AbstractGatherer.py  BackwardGatherer.py  BiasGradientGatherer.py  EpochModuleGatherer.py  FeedForwardGatherer.py  WeightGradientGatherer.py  __init__.py  abstract_gatherer.py  backward_gatherer.py  bias_gradient_gatherer.py  call_parameter_gatherer.py  epoch_module_gatherer.py  feed_forward_gatherer.py  optimizer_step_module_gatherer.py  optimizer_step_parameter_gatherer.py  parameter_gradient_gatherer.py  weight_gradient_gatherer.py
monitorch/inspector/: PyTorchInspector.py  __init__.py  inspector_state.py
monitorch/lens/: AbstractLens.py  __init__.py  abstract_lens.py  loss_metrics.py  module_distinction.py  output_activation.py  output_gradient_geometry.py  output_norm.py  parameter_cond.py  parameter_gradient_activation.py  parameter_gradient_geometry.py  parameter_norm.py  parameter_update_geometry.py
monitorch/numerical/: ActivationComputation.py  RunningValue.py  __init__.py  activation_computation.py  geometry_computation.py  running_value.py  threshold_for_module.py
monitorch/preprocessor/: AbstractBackwardPreprocessor.py  AbstractForwardPreprocessor.py  AbstractGradientPreprocessor.py  AbstractModulePreprocessor.py  AbstractPreprocessor.py  BiasGradientGeometryMemory.py  BiasGradientGeometryRunning.py  BiasGradientRunningGeometry.py  ExplicitCall.py  GradientActivationMemory.py  GradientActivationRunning.py  GradientGeometryMemory.py  GradientGeometryRunning.py  GradientRunningGeometry.py  OutputActivationMemory.py  OutputActivationRunning.py  OutputGradientGeometryMemory.py  OutputGradientGeometryRunning.py  OutputGradientRunningGeometry.py  OutputNormMemory.py  OutputNormRunning.py  OutputRunningActivation.py  OutputRunningNorm.py  ParameterNormMemory.py  ParameterNormRunning.py  WeightGradientActivationMemory.py  WeightGradientActivationRunning.py  WeightGradientGeometryMemory.py  WeightGradientGeometryRunning.py  WeightGradientRunningGeometry.py  __init__.py  _module_classes.py
monitorch/visualizer/: AbstractVisualizer.py  DummyVisualizer.py  MatplotlibVisualizer.py  PrintVisualizer.py  RecorderPlayerVisualizer.py  TensorBoardVisualizer.py  __init__.py
monitorch/vizualizer/: AbstractVizualizer.py  MatplotlibVizualizer.py  PrintVizualizer.py  TensorBoardVizualizer.py  __init__.py
tests/test_lens/: lenses_testing_utils.py  (+9 more)
tutorials/: PyTorchFeaturesUsed.ipynb  TensorBoardHooks.ipynb
(+67 files in other folders)
