[project]
name = "monitorch"
version = "0.1.0"
description = "A plug-and-use python library to monitor learning of PyTorch neural networks"
readme = "README.md"
authors = [
  { name = "Maksym Khavil", email = "mk.khavil@gmail.com" }
]
keywords = [
        "pytorch",
        "visualization",
        "neural networks",
        "gradients"
]
license = "BSD-3-Clause"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent"
]
requires-python = ">=3.10"

dependencies = [
  "torch>=2.0.0",
  "matplotlib",
  "tensorboard"
]

[project.urls]
"Homepage" = "https://github.com/ZhigaMason/monitorch"
"Bug Tracker" = "https://github.com/ZhigaMason/monitorch/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["monitorch"]
