[project]
name = "monitorch"
version = "0.1.0.1"
description = "A plug-and-use python library to monitor learning of PyTorch neural networks"
readme = "README.md"
authors = [
  { name = "Maksym Khavil", email = "mk.khavil@gmail.com" }
]
keywords = [
        "pytorch",
        "visualization",
        "neural networks",
        "gradients"
]
license = "MIT"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent"
]
requires-python = ">=3.10"

dependencies = [
  "torch>=2.0.0",
  "matplotlib>=3.10.0",
  "tensorboard>=2.19.0",
  "sphinx>=8.1.3",
  "pydata-sphinx-theme>=0.16.1",
]

[project.urls]
"Homepage" = "https://github.com/ZhigaMason/monitorch"
"Bug Tracker" = "https://github.com/ZhigaMason/monitorch/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["monitorch*"]

[tool.pytest.ini_options]
markers = [
    "smoke: tests only succesful runs, no functionality asserts",
]

[tool.ruff]
target-version = "py310"
line-length = 300
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "venv",
    "__pypackages__",
    "build",
    "dist",
    "node_modules",
    "*.ipynb",
    "benchmark",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors (formatting and syntax)
    "W",   # pycodestyle warnings
    "F",   # pyflakes (undeclared variables, unused imports)
    "I",   # isort (automatic import sorting)
    "UP",  # pyupgrade (automatically upgrades Python syntax for you)
]

# Rules you specifically want to ignore (empty for now)
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.mccabe]
# Flag functions with a complexity score higher than 15
max-complexity = 15

[tool.ruff.lint.isort]
split-on-trailing-comma=false

[tool.ruff.format]
# Match Black's standard formatting style
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
